--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "dev:front": "npm run dev --workspace frontend",
-    "dev:back": "npm run dev --workspace backend"
+    "dev:back": "npm run dev --workspace backend",
+    "dev:all": "npm-run-all2 --parallel dev:front dev:back"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/florianparret/task-flow-app/issues"
   },
-  "homepage": "https://github.com/florianparret/task-flow-app#readme"
+  "homepage": "https://github.com/florianparret/task-flow-app#readme",
+  "devDependencies": {
+    "npm-run-all2": "^6.2.0"
+  }
 }
