--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 node_modules
 **/node_modules
 **/frontend/vite.config.ts.timestamp*
-packages/mongo/data/*
+packages/backend/mongo/data/_mdb_catalog.wt
