--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,9 +1,13 @@
 {
+  "include": ["src/**/*"],
   "compilerOptions": {
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
     "target": "ESNext",
-    "outDir": "dist"
-  },
-  "include": ["src", "src/app.ts"]
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
