--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register test/**/*.ts",
+    "test": "jest",
     "start": "npm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
-    "dev": "node --env-file=.env  --watch --require ts-node/register src/app.ts",
+    "dev": "docker-compose up --detach & node --env-file=.env  --watch --require ts-node/register src/app.ts",
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
   },
   "keywords": [],
@@ -28,10 +28,14 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.4.4",
     "c8": "^9.0.0",
     "concurrently": "^8.2.2",
     "fastify-tsconfig": "^2.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.4.0",
     "typescript": "^5.2.2"
   }
